Update css + image block
- Hover image block
- Image information hover

--- a/templates/family.html
+++ b/templates/family.html
@@ -206,31 +206,49 @@
         <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+            <div class="overlay-block">
+              <h2>Pure Care</h2>
+            </div>
           </div>   
         </div>
         <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+            <div class="overlay-block">
+              <h2>Songs of love & hate</h2>
+            </div>
           </div>   
         </div>
         <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+            <div class="overlay-block">
+              <h2>Chocolate heaven</h2>
+            </div>
           </div>   
         </div>
         <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+              <div class="overlay-block">
+              <h2>Freek de Jonge</h2>
+            </div>
           </div>   
         </div>
         <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
+            <div class="overlay-block">
+              <h2>It's the end</h2>
+            </div>
           </div>   
         </div>
         <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Proforma_in_use_04_things_to_forget4.jpg">
+            <div class="overlay-block">
+              <h2>Things to forget</h2>
+            </div>
           </div>   
         </div>
       </div>
@@ -243,26 +261,41 @@
         <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+            <div class="overlay-block">
+              <h2>Pure Care</h2>
+            </div>
           </div>   
         </div>
         <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+            <div class="overlay-block">
+              <h2>Songs of love & hate</h2>
+            </div>
           </div>   
         </div>
         <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+            <div class="overlay-block">
+              <h2>Chocolate heaven</h2>
+            </div>
           </div>   
         </div>
         <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+            <div class="overlay-block">
+              <h2>Freek de Jonge</h2>
+            </div>
           </div>   
         </div>
         <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
+            <div class="overlay-block">
+              <h2>It's the end</h2>
+            </div>
           </div>   
         </div>
       </div>
@@ -274,21 +307,33 @@
         <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+            <div class="overlay-block">
+              <h2>Pure Care</h2>
+            </div>
           </div>   
         </div>
         <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+            <div class="overlay-block">
+              <h2>Songs of love & hate</h2>
+            </div>
           </div>   
         </div>
         <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+            <div class="overlay-block">
+              <h2>Chocolate heaven</h2>
+            </div>
           </div>   
         </div>
         <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+            <div class="overlay-block">
+              <h2>Freek de Jonge</h2>
+            </div>
           </div>   
         </div>
       </div>
@@ -300,17 +345,26 @@
         <div class="three-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+            <div class="overlay-block">
+              <h2>Pure Care</h2>
+            </div>
           </div>   
         </div>
         <div class="three-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+            <div class="overlay-block">
+              <h2>Songs of love & hate</h2>
+            </div>
           </div>   
         </div>
         <div class="three-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
-          </div>   
+            <div class="overlay-block">
+              <h2>Chocolate heaven</h2>
+            </div>
+         </div>   
         </div>
       </div>
     </div>
@@ -321,11 +375,17 @@
         <div class="two-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+            <div class="overlay-block">
+              <h2>Pure Care</h2>
+            </div>
           </div>   
         </div>
         <div class="two-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+            <div class="overlay-block">
+              <h2>Songs of love & hate</h2>
+            </div>
           </div>   
         </div>
       </div>
@@ -367,39 +427,47 @@
         </div>
       </div>
       <div class="container4">
-        <div class="column4 topic">
-          <div class="text-block">
-            <h4>Wide range of weights</h4>
-            <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
-            </div>   
-          </div>
-        </div>
-        <div class="column4 topic">
-          <div class="text-block">
-            <h4>Extended glyph set</h4>
-            <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic02.png">
-            </div>   
-          </div>
-        </div>
-        <div class="column4 topic">
-          <div class="text-block">
-            <h4>Five master drawings per character</h4>
-            <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic03.png">
+        <div class="column4">
+          <div class="topic">        
+            <div class="text-block">
+              <h4>Wide range of weights</h4>
+              <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
+              </div>   
             </div>
           </div>
         </div>
-        <div class="column4 topic">
-          <div class="text-block">
-            <h4>Figures and fractions</h4>
-            <p>Upgrade offers a variety of figures and supporting currency symbols for use with capitals, small caps, lowercase characters, and fractions.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic04.png">
+        <div class="column4">
+          <div class="topic">        
+            <div class="text-block">
+              <h4>Extended glyph set</h4>
+              <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic02.png">
+              </div>   
+            </div>
+          </div>
+        </div>
+        <div class="column4">
+          <div class="topic">        
+            <div class="text-block">
+              <h4>Five master drawings per character</h4>
+              <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic03.png">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column4">
+          <div class="topic">        
+            <div class="text-block">
+              <h4>Figures and fractions</h4>
+              <p>Upgrade offers a variety of figures and supporting currency symbols for use with capitals, small caps, lowercase characters, and fractions.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic04.png">
+              </div>
             </div>
           </div>
         </div>
@@ -416,30 +484,36 @@
         </div>
       </div>
       <div class="container3">
-        <div class="column3m topic">
-          <div class="text-block">
-            <h4>Wide range of weights</h4>
-            <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
-            </div>   
+        <div class="column3m">
+          <div class="topic">        
+            <div class="text-block">
+              <h4>Wide range of weights</h4>
+              <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
+              </div>   
+            </div>
           </div>
         </div>
-        <div class="column3m topic">
-          <div class="text-block">
-            <h4>Extended glyph set</h4>
-            <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic02.png">
-            </div>   
+        <div class="column3m">
+          <div class="topic">        
+            <div class="text-block">
+              <h4>Extended glyph set</h4>
+              <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic02.png">
+              </div>   
+            </div>
           </div>
         </div>
-        <div class="column3m topic">
-          <div class="text-block">
-            <h4>Five master drawings per character</h4>
-            <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
-            <div class="image-block">
-                <img src="https://upgrade.typenetwork.com/images/pic03.png">
+        <div class="column3m">
+          <div class="topic">
+            <div class="text-block">
+              <h4>Five master drawings per character</h4>
+              <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
+              <div class="image-block">
+                  <img src="https://upgrade.typenetwork.com/images/pic03.png">
+              </div>
             </div>
           </div>
         </div>
@@ -456,23 +530,27 @@
         </div>
       </div>
       <div class="container2">
-        <div class="column2 topic">
-          <div class="text-block">
-            <h4>Wide range of weights</h4>
-            <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
-            </div>   
+        <div class="column2">
+          <div class="topic">
+            <div class="text-block">
+              <h4>Wide range of weights</h4>
+              <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
+              </div>   
+            </div>
           </div>
         </div>
-        <div class="column2 topic">
-          <div class="text-block">
-            <h4>Extended glyph set</h4>
-            <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
-            <div class="image-block">
-              <img src="https://upgrade.typenetwork.com/images/pic02.png">
-            </div>   
-          </div>
+        <div class="column2">
+          <div class="topic">
+            <div class="text-block">
+              <h4>Extended glyph set</h4>
+              <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
+              <div class="image-block">
+                <img src="https://upgrade.typenetwork.com/images/pic02.png">
+              </div>   
+            </div>
+        </div>
         </div>
       </div>
     </div>
@@ -574,19 +652,19 @@
   <div class="block dark">  
       <div class="container4">
           <div class="column4">
-              <span class="counter" data-target="6">0</span>
+              <div class="counter" data-target="6">0</div>
               <div class="number-header">Weights</div>
           </div>
           <div class="column4">
-              <span class="counter" data-target="4">0</span>
+              <div class="counter" data-target="4">0</div>
               <div class="number-header">Axes</div>
           </div>
           <div class="column4">
-              <span class="counter" data-target="6">0</span>
+              <div class="counter" data-target="6">0</div>
               <div class="number-header">Weights</div>
           </div>
           <div class="column4">
-              <span class="counter" data-target="4">0</span>
+              <div class="counter" data-target="4">0</div>
               <div class="number-header">Axes</div>
           </div>
       </div>
