--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,7 @@ h3 {
 h3.sub{
   font-size: 1.8em;
   font-family:"Upgrade";
-  font-weight:Medium;
+  font-weight:RΩ∂ƒegular;
 }
 
 h4 {
@@ -927,20 +927,17 @@ nav{
 }
 
 @media screen and (min-width: 1200px) {
-  .column-flex {width:50%;}
-  .column2 {width: 50%;}
+  .column-flex {width:49%;}
+  .column2 {width: 49%;}
   .column3 {width: 33.3%;}
   .column3m {width: 33.3%;}
   .column4 {width: 25%;}
 }
 
 @media screen and (max-width: 1000px) {
-  .column-flex {width: 50%;}
-  .column2 {width: 50%;}
-  .column3 {width: 50%;}
+  .column-flex {width: 49%;}
+  .column2, .column3, .column4 {width: 49%;}
   .column3m {width: 100%;}
-  .column4 {width: 50%;}
-  .block{background-color: red;}
 }
 
 @media screen and (max-width: 750px) {
@@ -1222,8 +1219,26 @@ nav{
   margin:0px;
 }
 
-.rot img{
-  border-radius: 5px 0px 0px 5px; 
+.rot img {
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 1700px) {
+  .rot img {
+    border-radius: 5px 0 0 5px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .rot img {
+    border-radius: 5px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .rot img {
+    border-radius: 0;
+  }
 }
 
 .vot {
@@ -1241,16 +1256,59 @@ nav{
 
 /* IMAGE BLOCK */
 
-.image-block {
-    width: 100%;
-    transition: all 0.3s ease-in-out;
+.image-block .overlay-block {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.4); 
+  font-family:"Upgrade";
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+}
 
+.image-block .overlay-block h2{
+  font-size: 32px;
+  font-weight: Regular;
+  color:white;
+  font-weight: Medium;
+}
+
+
+.image-block:hover .overlay-block {
+  opacity: 1;
+}
+
+.image-block {
+  width: 100%;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: auto;
 }
 
 .image-block img {
     width: 100%;
     height: auto;
     display: block;
+}
+
+.two-colum-flex .image-block:hover img,
+.three-colum-flex .image-block:hover img,
+.four-colum-flex .image-block:hover img,
+.five-colum-flex .image-block:hover img,
+.six-colum-flex .image-block:hover img {
+  filter: brightness(60%);
+  box-shadow: inset 0px 0px 0px 20px black;
+  transition: filter 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 /* TOPIC */
@@ -1540,12 +1598,10 @@ x
 
 .counter {
     font-size: 2rem;
-    font-weight: bold;
-    display: block;
     margin: 10px 0;
     color: white;
     font-family:"Upgrade";
-    font-weight:Medium;
+    font-weight: bold;
     text-align: center;
     opacity: 0;
     transition: opacity 6s linear;
