--- a/templates/family.html
+++ b/templates/family.html
@@ -203,53 +203,61 @@
     <div class="block">  
       <!-- CONTENT -->
       <div class="six-colum-flex">  
-        <div class="six-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
-            <div class="overlay-block">
-              <h2>Pure Care</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="six-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
-            <div class="overlay-block">
-              <h2>Songs of love & hate</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="six-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
-            <div class="overlay-block">
-              <h2>Chocolate heaven</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="six-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+        <div class="grid">
+          <div class="six-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
               <div class="overlay-block">
-              <h2>Freek de Jonge</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="six-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
-            <div class="overlay-block">
-              <h2>It's the end</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="six-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Proforma_in_use_04_things_to_forget4.jpg">
-            <div class="overlay-block">
-              <h2>Things to forget</h2>
-            </div>
-          </div>   
+                <h2>Pure Care</h2>
+                <p>Elegant</p>
+              </div>
+            </div>   
+          </div>
+          <div class="six-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+              <div class="overlay-block">
+                <h2>Songs of love & hate</h2>
+                <p>Harmonious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="six-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+              <div class="overlay-block">
+                <h2>Chocolate heaven</h2>
+                <p>Delicious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="six-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+                <div class="overlay-block">
+                <h2>Freek de Jonge</h2>
+                <p>Hilarious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="six-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
+              <div class="overlay-block">
+                <h2>It's the end</h2>
+                <p>Informational</p>
+              </div>
+            </div>   
+          </div>
+          <div class="six-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Proforma_in_use_04_things_to_forget4.jpg">
+              <div class="overlay-block">
+                <h2>Things to forget</h2>
+                <p>Curly</p>
+              </div>
+            </div>   
+          </div>
         </div>
       </div>
     </div>
@@ -258,45 +266,52 @@
     <div class="block">  
       <!-- CONTENT -->
       <div class="five-colum-flex">  
-        <div class="five-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
-            <div class="overlay-block">
-              <h2>Pure Care</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="five-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
-            <div class="overlay-block">
-              <h2>Songs of love & hate</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="five-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
-            <div class="overlay-block">
-              <h2>Chocolate heaven</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="five-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
-            <div class="overlay-block">
-              <h2>Freek de Jonge</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="five-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
-            <div class="overlay-block">
-              <h2>It's the end</h2>
-            </div>
-          </div>   
+        <div class="grid">
+          <div class="five-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+              <div class="overlay-block">
+                <h2>Pure Care</h2>
+                <p>Elegant</p>
+              </div>
+            </div>   
+          </div>
+          <div class="five-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+              <div class="overlay-block">
+                <h2>Songs of love & hate</h2>
+                <p>Harmonious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="five-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+              <div class="overlay-block">
+                <h2>Chocolate heaven</h2>
+                <p>Delicious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="five-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+              <div class="overlay-block">
+                <h2>Freek de Jonge</h2>
+                <p>Hilarious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="five-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
+              <div class="overlay-block">
+                <h2>It's the end</h2>
+                <p>Informational</p>
+              </div>
+            </div>   
+          </div>
         </div>
       </div>
     </div>
@@ -304,37 +319,43 @@
     <!-- FOUR COLUMNS IMAGES -->
     <div class="block">  
       <div class="four-colum-flex">  
-        <div class="four-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
-            <div class="overlay-block">
-              <h2>Pure Care</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="four-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
-            <div class="overlay-block">
-              <h2>Songs of love & hate</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="four-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
-            <div class="overlay-block">
-              <h2>Chocolate heaven</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="four-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
-            <div class="overlay-block">
-              <h2>Freek de Jonge</h2>
-            </div>
-          </div>   
+        <div class="grid">
+          <div class="four-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+              <div class="overlay-block">
+                <h2>Pure Care</h2>
+                <p>Elegant</p>
+              </div>
+            </div>   
+          </div>
+          <div class="four-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+              <div class="overlay-block">
+                <h2>Songs of love & hate</h2>
+                <p>Harmonious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="four-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+              <div class="overlay-block">
+                <h2>Chocolate heaven</h2>
+                <p>Delicious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="four-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+              <div class="overlay-block">
+                <h2>Freek de Jonge</h2>
+                <p>Hilarious</p>
+              </div>
+            </div>   
+          </div>
         </div>
       </div>
     </div>
@@ -342,29 +363,34 @@
     <!-- THREE COLUMNS IMAGES -->
     <div class="block">  
       <div class="three-colum-flex">  
-        <div class="three-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
-            <div class="overlay-block">
-              <h2>Pure Care</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="three-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
-            <div class="overlay-block">
-              <h2>Songs of love & hate</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="three-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
-            <div class="overlay-block">
-              <h2>Chocolate heaven</h2>
-            </div>
-         </div>   
+        <div class="grid">
+          <div class="three-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+              <div class="overlay-block">
+                <h2>Pure Care</h2>
+                <p>Elegant</p>
+              </div>
+            </div>   
+          </div>
+          <div class="three-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+              <div class="overlay-block">
+                <h2>Songs of love & hate</h2>
+                <p>Harmonious</p>
+              </div>
+            </div>   
+          </div>
+          <div class="three-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+              <div class="overlay-block">
+                <h2>Chocolate heaven</h2>
+                <p>Delicious</p>
+              </div>
+           </div>   
+          </div>
         </div>
       </div>
     </div>
@@ -372,21 +398,25 @@
     <!-- TWO COLUMNS IMAGES -->
     <div class="block">  
       <div class="two-colum-flex">  
-        <div class="two-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
-            <div class="overlay-block">
-              <h2>Pure Care</h2>
-            </div>
-          </div>   
-        </div>
-        <div class="two-items-flex">
-          <div class="image-block">
-            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
-            <div class="overlay-block">
-              <h2>Songs of love & hate</h2>
-            </div>
-          </div>   
+        <div class="grid">
+          <div class="two-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+              <div class="overlay-block">
+                <h2>Pure Care</h2>
+                <p>Elegant</p>
+              </div>
+            </div>   
+          </div>
+          <div class="two-items-flex">
+            <div class="image-block">
+              <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+              <div class="overlay-block">
+                <h2>Songs of love & hate</h2>
+                <p>Harmonious</p>
+              </div>
+            </div>   
+          </div>
         </div>
       </div>
     </div>
@@ -847,25 +877,109 @@
       </div>
     </div>
     <div class="four-colum-flex">  
-      <div class="four-items-flex">
-        <div class="image-block">
-          <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
-        </div>   
-      </div>
-      <div class="four-items-flex">
-        <div class="image-block">
-          <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
-        </div>   
-      </div>
-      <div class="four-items-flex">
-        <div class="image-block">
-          <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
-        </div>   
-      </div>
-      <div class="four-items-flex">
-        <div class="image-block">
-          <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
-        </div>   
+      <div class="grid">
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/loopings.png">
+            <div class="overlay-block">
+              <h2>Bitcount Mono</h2>
+              <p>Single & Double</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/BitcountMonoDoubleRegularCircle.png">
+            <div class="overlay-block">
+              <h2>Bitcount Mono</h2>
+              <p>Double Regular Mono</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img//works/gridbase.png">
+            <div class="overlay-block">
+              <h2>Bitcount Mono</h2>
+              <p>Single & Double</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/bitcount_metal_black.png">
+            <div class="overlay-block">
+              <p>3D render by Mohamed Amine Belcaid</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/pixelshapes_colors_layers.png">
+            <div class="overlay-block">
+              <h2>Pixel shapes & color layers</h2>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/highline.png">
+            <div class="overlay-block">
+              <h2>Bitcount Mono</h2>
+              <p>Single & Double</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/theonlypixelfontyouwilleverneed.png">
+            <div class="overlay-block">
+              <h2>3D render by Mohamed Amine Belcaid</h2>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/bits_pieces.png">
+            <div class="overlay-block">
+              <h2>Bitcount Mono</h2>
+              <p>Single & Double</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/Bitcount_Single_Versions.png">
+            <div class="overlay-block">
+              <h2>Seven sets of figures</h2>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/hey_you.png">
+            <div class="overlay-block">
+              <h2>Bitcount Mono</h2>
+              <p>Single & Double</p>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/typetr_3D_render_red.png">
+            <div class="overlay-block">
+              <h2>3D render of Single Prop Regular by Mohamed Amine Belcaid</h2>
+            </div>
+          </div>   
+        </div>
+        <div class="four-items-flex">
+          <div class="image-block">
+            <img src="https://bitcount.typenetwork.com/img/works/mr_x.png">
+            <div class="overlay-block">
+              <h2>Bitcount Prop Single Italic</h2>
+            </div>
+          </div>   
+        </div>
       </div>
     </div>
   </div>
